--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -6,7 +6,9 @@
 
 // Bootstrap
 @import 'bootstrap/scss/bootstrap';
-
-.wl{
-    color: #6a6b91;
-}
+// body{
+//     background-color: #7e8286;
+// }
+// .wl{
+//     color: #6a6b91;
+// }
