--- a/resources/css/project.css
+++ b/resources/css/project.css
@@ -44,7 +44,7 @@
 @media screen and (max-width: 310px) {
     .user {
         display: none;
-    }
+    }rt
     .user-icon {
         margin-right: 70px;
         margin-left: 5px;
