--- a/resources/css/sidebar.css
+++ b/resources/css/sidebar.css
@@ -5,16 +5,17 @@ body {
 
 .sidebar {
     height: 100%;
-    width: 200px;
+    width: 180px;
     position: fixed;
     top: 50px;
-    right: -170px;
+    right: -130px;
     /* Adjust to hide initially */
     background-color: #03174C;
     overflow-x: hidden;
     transition: 0.5s;
     display: flex;
     flex-direction: column;
+    z-index: 1;
 }
 
 .sidebar ul {
@@ -32,6 +33,7 @@ body {
     text-decoration: none;
     color: white;
     font-size: 18px;
+    padding-right: 15px;
     display: block;
 }
 
@@ -42,27 +44,43 @@ body {
     padding: 10px;
 }
 
+.sidebaricon {
+    float: right;
+    margin-left: 15px;
+    margin-top: 5px;
+}
+
 .hdr2 {
     background-color: rgb(255, 255, 255);
     height: 50px;
     width: 100%;
     color: #0E70F2;
     box-shadow: 0px 0px 5px 0px rgb(72, 72, 72);
-    margin-left: -10px;
-    box-sizing: border-box;
-    margin-top: 2px;
+    transition: margin-right 0.5s;
+    text-align: center;
+    margin-right: 50px;
+    margin-top: 50px;
+    position: static;
+    z-index: 1;
 }
 
 .content {
-    margin-right: 60px;
+    margin-right: 50px;
     /* Adjust to match the min-width of the sidebar */
     transition: margin-right 0.5s;
     text-align: center;
+    background-color: #E9EEEF;
+    padding-top: 10px;
+    margin-top: 2px;
+    height: 100%;
 }
 
 @media screen and (max-width: 300px) {
     .sidebar {
         width: 50px;
+    }
+    .sidebartext {
+        display: none;
     }
     .sidebar .toggle-btn {
         display: block;
@@ -70,21 +88,14 @@ body {
     .content {
         margin-right: 50px;
     }
-
-
-.hdr2 {
-    margin-right: 50px;
-    position: fixed;
-}
-
-.sidebar {
-    right: -170px;
-    /* Adjust to hide initially, and float to the right */
-}
-
-.content {
-    margin-right: 50px;
-}
-
-
+    .hdr2 {
+        margin-right: 50px;
+    }
+    .sidebar {
+        right: -130px;
+        /* Adjust to hide initially, and float to the right */
+    }
+    .content {
+        margin-right: 50px;
+    }
 }
