--- a/resources/css/project.css
+++ b/resources/css/project.css
@@ -74,9 +74,29 @@ div.card {
     height: 220px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     text-align: center;
-    margin-top: 10px;
+    margin-top: 20px;
     margin-left: 15px;
     display: inline-block;
+    border-radius: 5px;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    -ms-border-radius: 5px;
+    -o-border-radius: 5px;
+}
+
+.card-child-1 {
+    width: 220px;
+    height: 70px;
+    background-color: #118DEC;
+    color: white;
+    margin-top: 0px;
+    margin-left: -1px;
+    margin-right: 0px;
+    font-size: 12px;
+    padding-top: 10px;
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 5px;
+    text-align: center;
 }
 
 .responsive {
