--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,2 +1,5 @@
-@import './sidebar.css'; 
+@import './sidebar.css';
 @import './project.css';
+@import './projects-forms.css';
+@import './assignments.css';
+@import './recives-HW.css';
