--- a/resources/css/students.css
+++ b/resources/css/students.css
@@ -43,6 +43,12 @@
 
 /* Responsive Styles */
 
+@media screen and (max-width: 1100px) {
+    #btn-group-students {
+        margin-left: 16%;
+    }
+}
+
 @media screen and (max-width: 992px) {
     #btn-group-students {
         margin-left: 17%;
@@ -268,10 +274,17 @@
     box-shadow: 1px rgb(72, 72, 72);
 }
 
-@media screen and (max-width: 1000px) {
+@media screen and (max-width: 1100px) {
     #input-groupstudent {
-        margin-left: 250px;
+        margin-left: 300px;
         width: 250px;
+        position: fixed;
+    }
+}
+
+@media screen and (max-width: 930px) {
+    #input-groupstudent {
+        margin-left: 210px;
     }
 }
 
@@ -468,6 +481,12 @@
 
 /* Responsive Styles */
 
+@media screen and (max-width: 1100px) {
+    #btn-groups-students {
+        margin-left: 60%;
+    }
+}
+
 @media screen and (max-width:992px) {
     #btn-groups-students {
         margin-left: 64%;
@@ -663,4 +682,75 @@
     font-size: 10px;
     font-weight: normal;
     position: fixed;
+}
+
+.group1 input[type="radio"] {
+    appearance: none;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    width: 16px;
+    height: 16px;
+    border-radius: 50%;
+    border: 2px solid #e74c3c;
+    background-color: white;
+    outline: none;
+}
+
+.group1 input[type="radio"]:checked {
+    background-color: #ff1900;
+    border-color: #ff1900;
+}
+
+.group2 input[type="radio"] {
+    appearance: none;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    width: 16px;
+    height: 16px;
+    border-radius: 50%;
+    border: 2px solid #3498db;
+    background-color: white;
+    outline: none;
+}
+
+.group2 input[type="radio"]:checked {
+    background-color: #3498db;
+    border-color: #3498db;
+}
+
+
+/* Style for Group 2 */
+
+.group3 input[type="radio"] {
+    appearance: none;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    width: 16px;
+    height: 16px;
+    border-radius: 50%;
+    border: 2px solid #3ce789;
+    background-color: white;
+    outline: none;
+}
+
+.group3 input[type="radio"]:checked {
+    background-color: #00ff11;
+    border-color: #3ce747;
+}
+
+.group4 input[type="radio"] {
+    appearance: none;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    width: 16px;
+    height: 16px;
+    border-radius: 50%;
+    border: 2px solid #3c47e7;
+    background-color: white;
+    outline: none;
+}
+
+.group4 input[type="radio"]:checked {
+    background-color: #2200ff;
+    border-color: #3c3fe7;
 }
