--- a/resources/css/recives-HW.css
+++ b/resources/css/recives-HW.css
@@ -61,7 +61,7 @@
                 position: fixed;
             }
             
-            #input-group {
+            #input-group-reciv-assign {
                 width: 300px;
                 margin-left: 450px;
                 height: 30px;
@@ -79,33 +79,33 @@
             }
             
             @media screen and (max-width: 1000px) {
-                #input-group {
+                #input-group-reciv-assign {
                     margin-left: 300px;
                 }
             }
             
             @media screen and (max-width: 890px) {
-                #input-group {
+                #input-group-reciv-assign {
                     margin-left: 270px;
                 }
             }
             
             @media screen and (max-width: 840px) {
-                #input-group {
+                #input-group-reciv-assign {
                     margin-left: 200px;
                 }
             }
             
             @media screen and (max-width: 740px) {
-                #input-group {
+                #input-group-reciv-assign {
                     margin-left: 180px;
                 }
             }
             
             @media screen and (max-width: 550px) {
-                #input-group {
+                #input-group-reciv-assign {
                     width: 230px;
-                    margin-top: 5px;
+                    margin-top: 1px;
                     margin-left: 140px;
                 }
                 .form-control {
@@ -121,17 +121,17 @@
             }
             
             @media screen and (max-width: 425px) {
-                #input-group {
+                #input-group-reciv-assign {
                     width: 220px;
-                    margin-top: 5px;
+                    margin-top: 1px;
                     margin-left: 100px;
                 }
             }
             
             @media screen and (max-width: 370px) {
-                #input-group {
+                #input-group-reciv-assign {
                     width: 180px;
-                    margin-top: 5px;
+                    margin-top: 1px;
                     margin-left: 100px;
                 }
             }
