--- a/resources/css/projects-forms.css
+++ b/resources/css/projects-forms.css
@@ -35,6 +35,7 @@
     -o-border-radius: 5px;
     border: none;
     margin-left: 10px;
+    position: fixed;
 }
 
 @media screen and (max-width: 550px) {
@@ -224,11 +225,12 @@
     top: 115px;
 }
 
-#input-group {
+#input-group-proj {
     width: 200px;
     margin-left: 500px;
     height: 30px;
     box-shadow: 2px rgb(72, 72, 72);
+    position: fixed;
 }
 
 .form-control {
@@ -241,20 +243,20 @@
 }
 
 @media screen and (max-width: 1000px) {
-    #input-group {
+    #input-group-proj {
         margin-left: 280px;
     }
 }
 
 @media screen and (max-width: 726px) {
-    #input-group {
+    #input-group-proj {
         margin-left: 230px;
     }
 }
 
 @media screen and (max-width: 550px) {
-    #input-group {
-        width: 150px;
+    #input-group-proj {
+        width: 230px;
         margin-top: 5px;
         margin-left: 180px;
     }
