--- a/resources/css/sendnotification.css
+++ b/resources/css/sendnotification.css
@@ -82,6 +82,7 @@
     box-shadow: 0px 0px 2px 0px rgb(72, 72, 72);
     position: absolute;
     color: black;
+    background-color: #ffffff;
 }
 
 @media (max-width: 1100px) {
@@ -145,6 +146,7 @@
     box-shadow: 0px 0px 2px 0px rgb(72, 72, 72);
     position: fixed;
     color: black;
+    background-color: #ffffff;
 }
 
 
