--- a/resources/css/projects-forms.css
+++ b/resources/css/projects-forms.css
@@ -371,7 +371,7 @@
         padding-bottom: 10px;
     }
     
-    #modheader {
+    #modheader-proj {
         height: 50px;
         font-size: 13px;
         font-weight: bold;
