--- a/resources/css/projects-forms.css
+++ b/resources/css/projects-forms.css
@@ -378,6 +378,7 @@
         text-align: center;
         padding-left: 200px;
         color: rgb(67, 111, 206);
+        background-color: #ffffff;
     }
     
     .modal-header {
