--- a/resources/css/projects-forms.css
+++ b/resources/css/projects-forms.css
@@ -544,7 +544,7 @@
     }
     
     .senders {
-        margin-top: 2%;
+        margin-top: 3%;
     }
     
     #sendersMessages {
@@ -563,6 +563,8 @@
         padding: 5px;
         text-align: right;
         left: 50%;
+        padding-bottom: 15px;
+        margin-top: -7px;
     }
     
     .recivers {
@@ -585,12 +587,13 @@
         text-align: right;
         color: black;
         left: 0%;
-        margin-top: -17px;
+        margin-top: -12px;
+        padding-bottom: 15px;
     }
     
     .sendingdate {
         float: left;
-        font-size: 12px;
+        font-size: 10px;
         color: #5b5b5c;
         position: absolute;
         bottom: 0%;
@@ -598,7 +601,7 @@
     
     .recivinggdate {
         float: left;
-        font-size: 12px;
+        font-size: 10px;
         color: #5b5b5c;
         position: absolute;
         bottom: 0%;
