--- a/resources/css/stastics.css
+++ b/resources/css/stastics.css
@@ -152,3 +152,124 @@
             margin-left: -8px;
         }
     }
+    
+    #input-groupspermission {
+        width: 300px;
+        margin-left: 450px;
+        height: 30px;
+        box-shadow: 2px rgb(72, 72, 72);
+        position: fixed;
+    }
+    
+    .form-control {
+        height: 33px;
+    }
+    
+    #form-control {
+        height: 33px;
+        box-shadow: 1px rgb(72, 72, 72);
+    }
+    
+    @media screen and (max-width: 1100px) {
+        #input-groupspermission {
+            margin-left: 350px;
+            width: 250px;
+            position: fixed;
+        }
+    }
+    
+    @media screen and (max-width: 930px) {
+        #input-groupspermission {
+            margin-left: 280px;
+            width: 250px;
+            position: fixed;
+        }
+    }
+    
+    @media screen and (max-width: 900px) {
+        #input-groupspermission {
+            margin-left: 230px;
+        }
+    }
+    /* @media screen and (max-width: 829px) {
+            #input-groupstudyingbooks {
+                margin-left: 150px;
+                width: 220px;
+            }
+        } */
+    
+    @media screen and (max-width: 750px) {
+        #input-groupspermission {
+            margin-left: 220px;
+            width: 220px;
+        }
+    }
+    
+    @media screen and (max-width: 700px) {
+        #input-groupspermission {
+            margin-left: 260px;
+            width: 220px;
+        }
+    }
+    
+    @media screen and (max-width: 600px) {
+        #input-groupspermission {
+            margin-left: 200px;
+            width: 220px;
+        }
+    }
+    
+    @media screen and (max-width: 550px) {
+        #input-groupspermission {
+            width: 200px;
+            margin-top: 3px;
+            margin-left: 200px;
+        }
+    }
+    
+    @media screen and (max-width: 500px) {
+        #input-groupspermission {
+            width: 200px;
+            margin-top: 3px;
+            margin-left: 180px;
+        }
+    }
+    
+    @media screen and (max-width: 450px) {
+        #input-groupspermission {
+            margin-left: 150px;
+            width: 180px;
+        }
+    }
+    
+    @media screen and (max-width: 390px) {
+        #input-groupspermission {
+            margin-left: 120px;
+            width: 180px;
+        }
+    }
+    /* @media screen and (max-width: 350px) {
+        #input-groupspermission {
+            width: 180px;
+        }
+    } */
+    
+    #btn-uploade-permission {
+        font-size: 12px;
+        font-weight: normal;
+        padding-left: 5px;
+        margin-left: 4%;
+        margin-top: 0px;
+        position: fixed;
+    }
+    /* @media screen and (max-width:992px) {
+        #btn-uploade-permission {
+            top: 130px;
+        }
+    } */
+    
+    @media screen and (max-width:550px) {
+        #btn-uploade-permission {
+            font-size: 10px;
+        }
+    }
