--- a/resources/css/projects-forms.css
+++ b/resources/css/projects-forms.css
@@ -339,7 +339,7 @@
     #inputtext {
         border: none;
         box-shadow: 0px 0px 2px 0px rgb(67, 111, 206);
-        text-align: right;
+        text-align: center;
         font-size: 12px;
         color: rgb(67, 111, 206);
     }
