--- a/resources/css/projects-forms.css
+++ b/resources/css/projects-forms.css
@@ -392,7 +392,7 @@
     }
     
     #btnsave {
-        margin-right: 300px;
+        left: 0%;
         width: 90px;
         margin-top: 3px;
         height: 32px;
